--- a/IBM uQGAN_Sampler_Converged3-Noise_SGD.ipynb
+++ b/IBM uQGAN_Sampler_Converged3-Noise_SGD.ipynb
@@ -774,7 +774,7 @@
     "#from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "#service = QiskitRuntimeService(channel=\"ibm_cloud\", \\\n",
-    "#                               token=\"Zzne8G5TAZLOjWe0HpsDKSzcrt0iKdw2ldEO91qC7L1B\", \\\n",
+    "#                               token=\"enter_token_here\", \\\n",
     "#                               instance=\"crn:v1:bluemix:public:quantum-computing:us-east:a/0e8a378ecdfa41538ab40d3fbb042607:2edd4104-6cf2-406e-a3b7-39f83f82da00::\")"
    ]
   },
